# cdci-tf-ansible

./: Dockerfile  Makefile  pyproject.toml  requirements.txt
