[project]
name = "cdci-tf-ansible"
version = "0.1.0"
description = ""
authors = [
    {name = "Vyacheslav",email = "git@voronenko.info"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible (>=11.2.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
